--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </button>
             Resultados para "Teste"
           </div>
-          <table class="table">
+          <table class="table table-striped table-condensed">
             <thead>
               <tr>
                 <th>Mês</th>
@@ -128,9 +128,17 @@
       </section>
 
       <section class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">Resumo</div>
+          <div class="panel-body">
+            <p class="lead text-success">R$ 0.000,00</p>
+            <p>De <mark>01/14</mark> até <mark>03/15</mark></p>
+          </div>
+        </div>
+
         <div id="f1" class="panel panel-default">
           <div class="panel-heading">Meses & Registros</div>
-          <table class="table">
+          <table class="table table-striped table-condensed">
             <thead>
               <tr>
                 <th>Mês</th>
