--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
           $.each(data.keys_values, function (i, e) {
             $('#f2 tbody').append('<tr><td>' + e[0] + '</td><td>' + e[1] + '</td><td>' + e[2] + '</td><td>' + e[3] + '</td></tr>');
           });
+          $('#f2 tfoot tr td:eq(1)').html(data.footer_values[0]);
+          $('#f2 tfoot tr td:eq(2)').html(data.footer_values[1]);
+          $('#f2 tfoot tr td:eq(3)').html(data.footer_values[2]);
           f2_show();
         }
 
@@ -96,15 +99,15 @@
             <button id="f2_hide" type="button" class="btn btn-danger btn-xs pull-right">
               <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
             </button>
-            Resultados para "Teste"
+            Resultados para "<span>Teste</span>"
           </div>
           <table class="table table-striped table-condensed">
             <thead>
               <tr>
                 <th>Mês</th>
                 <th>Valor</th>
+                <th>Total Período</th>
                 <th>Total Geral</th>
-                <th>Total</th>
               </tr>
             </thead>
             <tbody>
@@ -116,7 +119,7 @@
               </tr>
             </tbody>
             <tfoot>
-              <tr>
+              <tr class="info">
                 <td><b>Total</b></td>
                 <td></td>
                 <td></td>
