--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,6 @@
 
     <script>
       $(function () {
-
         var months;
 
         function print_f1(){
@@ -92,7 +91,6 @@
       </div>
 
       <section class="col-md-8">
-
         <div id="f2_search" class="input-group">
           <input type="text" class="form-control" placeholder="Buscar por...">
           <span class="input-group-btn">
@@ -107,7 +105,7 @@
             <button id="f2_hide" type="button" class="btn btn-danger btn-xs pull-right">
               <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
             </button>
-            Resultados para "<span id="f2_key">Teste</span>"
+            Resultados para "<span id="f2_key"></span>"
           </div>
           <table class="table table-striped table-condensed">
             <thead>
@@ -120,10 +118,10 @@
             </thead>
             <tbody>
               <tr>
-                <td>01/14</td>
-                <td>R$ 306,01</td>
-                <td>0.41% (R$ 73,962.17)</td>
-                <td>3.48%</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
               </tr>
             </tbody>
             <tfoot>
@@ -131,7 +129,7 @@
                 <td><b>Total</b></td>
                 <td></td>
                 <td></td>
-                <td><b id="f2_total">R$ 8,781.66</b></td>
+                <td><b id="f2_total"></b></td>
               </tr>
             </tfoot>
           </table>
@@ -142,8 +140,8 @@
         <div id="basic_info" class="panel panel-default">
           <div class="panel-heading">Resumo</div>
           <div class="panel-body">
-            <p id="basic_info_total" class="lead text-success">R$ 0.000,00</p>
-            <p>De <mark id="basic_info_start_at">01/14</mark> até <mark id="basic_info_end_at">03/15</mark></p>
+            <p id="basic_info_total" class="lead text-success"></p>
+            <p>De <mark id="basic_info_start_at"></mark> até <mark id="basic_info_end_at"></mark></p>
           </div>
         </div>
 
